# playoffbracket

./: .gitignore  DESIGN.md  alembic.ini  bracket.db  bracket.json  conftest.py  enums.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  seed.py  services.py  start.sh  tailwind.config.js  team.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: fb936e58db70_initial.py
get_data/: bracket.json  playoff.json  playoffs.py  schedule.json  scoreboard.json  team.json  teams.json  today_scores.json  yesterday_scores.json
migrate_db/: old_brackets.db
static/: manifest.json
static/css/: input.css
templates/: about.html  admin.html  base.html  bets.html  bracket.html  compare.html  error.html  leaderboard.html  login.html  my_bracket.html  predict.html  teams.html  vault.html
templates/partials/: navbar.html
tests/: conftest.py  test_routes.py  test_services.py
